--- a/advanced/client/index.html
+++ b/advanced/client/index.html
@@ -17,53 +17,13 @@
         <form method="POST" action="/todos" class="todo-form">
           <label for="name" class="todo-form__label">TODO</label>
           <div class="todo-form-input__wrapper">
-            <input id="name" name="name" type="text" class="todo-form__input" />
-            <input type="submit" class="todo-form__submit" value="Submit"></input>
+            <input id="todoName" name="name" type="text" class="todo-form__input" />
+            <input type="submit" class="todo-form__submit" value="Submit" id="todoAddButton"></input>
           </div>
         </form>
       </div>
       <div class="todos__wrapper">
-        <ul class="todos">
-          <li class="todo-item">
-            <label class="todo-toggle__container">
-              <input
-                data-todo-id="1"
-                type="checkbox"
-                class="todo-toggle"
-                value="checked"
-              />
-              <span class="todo-toggle__checkmark"></span>
-            </label>
-            <div class="todo-name">sample1</div>
-            <div data-todo-id="1" class="todo-remove-button">x</div>
-          </li>
-          <li class="todo-item">
-            <label class="todo-toggle__container">
-              <input
-                data-todo-id="2"
-                type="checkbox"
-                class="todo-toggle"
-                value="checked"
-              />
-              <span class="todo-toggle__checkmark"></span>
-            </label>
-            <div class="todo-name">sample2</div>
-            <div data-todo-id="2" class="todo-remove-button">x</div>
-          </li>
-          <li class="todo-item">
-            <label class="todo-toggle__container">
-              <input
-                data-todo-id="3"
-                type="checkbox"
-                class="todo-toggle"
-                value="checked"
-              />
-              <span class="todo-toggle__checkmark"></span>
-            </label>
-            <div class="todo-name">sample3</div>
-            <div data-todo-id="3" class="todo-remove-button">x</div>
-          </li>
-        </ul>
+        <ul class="todos" id="todoList"></ul>
       </div>
       <div class="todo-footer">
         <div class="done-items-num">
